exports[`test should accept a prop \`count\` which should overwrite the default 1`] = `
<Component
  count={22} />
`;

exports[`test should set the prop count to \`12\` by default 1`] = `
<Component
  count={12} />
`;
